--- a/public/partials/organismos.html
+++ b/public/partials/organismos.html
@@ -1,16 +1,16 @@
 <div class="panel panel-danger hidden-print">
 	<div class="panel-heading">
-		<div class="col-md-8">
+		<div class="col-md-7">
 			<h3 class="panel-title">{{title}}</h3>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-5">
 			<input type="text" ng-model="texto.$" placeholder="Filtro" class="form-control input-sm"/>
 		</div>
 		<div style="clear:both"></div>
 	</div>
 	<div class="panel-body">
 		<ul ng-if="arbol.length" style="padding-left:0.3em" ng-class="{'small': $root.condensed}">
-			<li ng-repeat="element in arbol | filter:texto | filter:filtrojerarquia" ng-class="{'list-group-item-warning':element.id==seleccionado.id}">
+			<li ng-animate="'animate'" ng-repeat="element in arbol | filter:texto | filter:filtrojerarquia" ng-class="{'list-group-item-warning':element.id==seleccionado.id}">
 				<span class="badge pull-right" title="Engloba {{element[attr]}} {{tipoelementos}}">{{element[attr]}}</span>
 				<p ng-class="{'text-muted': element[attr] === 0 }">
 					<strong>[{{element.id}}] &nbsp;</strong>
@@ -18,8 +18,8 @@
 						{{element.title}}
 					</span>
 				</p>
-				<ul class="list-group" ng-if="element.nodes" style="clear:both;padding-left:0.3em">
-					<li class="list-group-item" ng-repeat="elemen in element.nodes | filter:texto | filter:filtrojerarquia" ng-class="{'list-group-item-danger':elemen.id==seleccionado.id}">
+				<ul class="list-group" ng-if="element.nodes" >
+					<li ng-animate="'animate'" class="list-group-item" ng-repeat="elemen in element.nodes | filter:texto | filter:filtrojerarquia" ng-class="{'list-group-item-danger':elemen.id==seleccionado.id}">
 						<span class="badge pull-right" title="Engloba {{elemen[attr]}} {{tipoelementos}}">{{elemen[attr]}}</span>
 						<p ng-class="{'text-muted': elemen[attr]===0 }">
 							<strong>[{{elemen.id}}] &nbsp;</strong>
@@ -27,17 +27,17 @@
 								{{elemen.title}}
 							</span>
 						</p>
-						<ul class="list-group" ng-if="elemen.nodes" style="clear:both;padding-left:0.3em">
-							<li class="list-group-item" ng-repeat="eleme in elemen.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':eleme.id==seleccionado.id}" >
+						<ul class="list-group" ng-if="elemen.nodes" >
+							<li ng-animate="'animate'" class="list-group-item" ng-repeat="eleme in elemen.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-info':eleme.id==seleccionado.id}" >
 								<span class="badge pull-right" title="Engloba {{eleme[attr]}} {{tipoelementos}}">{{eleme[attr]}}</span>
 								<p ng-class="{'text-muted': eleme[attr]===0 }">
 									<strong>[{{eleme.id}}] &nbsp;</strong>
-									<span ng-class="{'bg-danger':eleme.id==seleccionado.id }" ng-click="setSeleccionado(eleme)" class="cursor" title="{{eleme.title}}">
+									<span ng-class="{'bg-info':eleme.id==seleccionado.id }" ng-click="setSeleccionado(eleme)" class="cursor" title="{{eleme.title}}">
 										{{eleme.title}}
 									</span>
 								</p>
-								<ul class="list-group" ng-if="eleme.nodes" style="clear:both;padding-left:0.3em">
-									<li class="list-group-item" ng-repeat="elem in eleme.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':elem.id==seleccionado.id }">
+								<ul class="list-group" ng-if="eleme.nodes" >
+									<li ng-animate="'animate'" class="list-group-item" ng-repeat="elem in eleme.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':elem.id==seleccionado.id }">
 										<span class="badge pull-right" title="Engloba {{elem[attr]}} {{tipoelementos}}">{{elem[attr]}}</span>
 										<p ng-class="{'text-muted': elem[attr]===0 , 'text-danger':elem.id==seleccionado.id }">
 											<strong>[{{elem.id}}] &nbsp;</strong>
@@ -45,8 +45,8 @@
 												{{elem.title}}
 											</span>
 										</p>
-										<ul class="list-group" ng-if="elem.nodes" style="clear:both;padding-left:0.3em">
-											<li class="list-group-item" ng-repeat="ele in elem.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':ele.id==seleccionado.id }">
+										<ul class="list-group" ng-if="elem.nodes" >
+											<li ng-animate="'animate'" class="list-group-item" ng-repeat="ele in elem.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':ele.id==seleccionado.id }">
 												<span class="badge pull-right" title="Engloba {{ele[attr]}} {{tipoelementos}}">{{ele[attr]}}</span>
 												<p ng-class="{'text-muted': ele[attr]===0, 'text-danger': ele.id==seleccionado.id }">
 													<strong>[{{ele.id}}] &nbsp;</strong>
@@ -54,8 +54,8 @@
 														{{ele.title}}
 													</span>
 												</p>
-												<ul class="list-group" ng-if="ele.nodes" style="clear:both;padding-left:0.3em">
-													<li class="list-group-item" ng-repeat="el in ele.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':el.id==seleccionado.id }">
+												<ul class="list-group" ng-if="ele.nodes" >
+													<li ng-animate="'animate'" class="list-group-item" ng-repeat="el in ele.nodes | filter:texto |filter:filtrojerarquia" ng-class="{'list-group-item-danger':el.id==seleccionado.id }">
 														<span class="badge pull-right" title="Engloba {{el[attr]}} {{tipoelementos}}">{{el[attr]}}</span>
 														<p ng-class="{'text-muted': el[attr]===0 }" ng-class="{'text-danger':el.id==seleccionado.id }">
 															<strong>[{{el.id}}] &nbsp;</strong>
@@ -63,17 +63,17 @@
 																{{el.title}}
 															</span>
 														</p>
-														<ul ng-if="showprocedimientos && ele.procedimientos" style="clear:both;padding-left:0.3em" class="list-group">
-															<li ng-repeat="proc in ele.procedimientos | filter:texto " ng-show="ele.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
+														<ul ng-if="showprocedimientos && ele.procedimientos" class="list-group">
+															<li ng-animate="'animate'" ng-repeat="proc in ele.procedimientos | filter:texto " ng-show="ele.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
 																<p>
 																	<strong>[{{proc.codigo}}] &nbsp;</strong>
 																	<span ng-click="setProcSeleccionado(proc)" class="cursor">{{proc.denominacion}}</span>
 																</p>
 															</li>
-															<li ng-if="!ele.procedimientos"><i>Cargando...</i></li>
+															<li ng-animate="'animate'" ng-if="!ele.procedimientos"><i>Cargando...</i></li>
 														</ul>
 														<ul ng-if="showcartas && ele.cartas" style="clear:both;padding-left:0.3em;" class="list-group">
-															<li ng-repeat="carta in ele.cartas | filter:texto " ng-show="ele.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
+															<li ng-animate="'animate'" ng-repeat="carta in ele.cartas | filter:texto " ng-show="ele.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
 																<p>
 																	<strong>[{{carta.codigo}}] &nbsp;</strong>
 																	<span ng-click="setCartaSeleccionada(carta)" class="cursor">{{carta.denominacion}}</span>
@@ -83,28 +83,28 @@
 														</ul>
 													</li>
 												</ul>
-												<ul ng-if="showprocedimientos && elem.procedimientos" style="clear:both;padding-left:0.3em" class="list-group">
-													<li ng-repeat="proc in elem.procedimientos | filter:texto " ng-show="elem.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
+												<ul ng-if="showprocedimientos && elem.procedimientos" class="list-group">
+													<li ng-animate="'animate'" ng-repeat="proc in elem.procedimientos | filter:texto " ng-show="elem.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
 														<p>
 															<strong>[{{proc.codigo}}] &nbsp;</strong>
 															<span ng-click="setProcSeleccionado(proc)" class="cursor">{{proc.denominacion}}</span>
 														</p>
 													</li>
-													<li ng-if="!elem.procedimientos"><i>Cargando...</i></li>
+													<li ng-animate="'animate'" ng-if="!elem.procedimientos"><i>Cargando...</i></li>
 												</ul>
 												<ul ng-if="showcartas && elem.cartas" style="clear:both;padding-left:0.3em;" class="list-group">
-													<li ng-repeat="carta in elem.cartas | filter:texto " ng-show="elem.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
+													<li ng-animate="'animate'" ng-repeat="carta in elem.cartas | filter:texto " ng-show="elem.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
 														<p>
 															<strong>[{{carta.codigo}}] &nbsp;</strong>
 															<span ng-click="setCartaSeleccionada(carta)" class="cursor">{{carta.denominacion}}</span>
 														</p>
 													</li>
-													<li ng-if="!elem.cartas"><i>Cargando...</i></li>
+													<li ng-animate="'animate'" ng-if="!elem.cartas"><i>Cargando...</i></li>
 												</ul>
 											</li>
 										</ul>
-										<ul ng-if="showprocedimientos && eleme.procedimientos" style="clear:both;padding-left:0.3em" class="list-group">
-											<li ng-repeat="proc in eleme.procedimientos | filter:texto " ng-show="eleme.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
+										<ul ng-if="showprocedimientos && eleme.procedimientos" class="list-group">
+											<li ng-animate="'animate'" ng-repeat="proc in eleme.procedimientos | filter:texto " ng-show="eleme.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
 												<p>
 													<strong> [{{proc.codigo}}] &nbsp;</strong>
 													<span ng-click="setProcSeleccionado(proc)" class="cursor">{{proc.denominacion}}</span>
@@ -113,7 +113,7 @@
 											<li ng-if="!eleme.procedimientos"><i>Cargando...</i></li>
 										</ul>
 										<ul ng-if="showcartas && eleme.cartas" style="clear:both;padding-left:0.3em; " class="list-group">
-											<li ng-repeat="carta in eleme.cartas | filter:texto " ng-show="eleme.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
+											<li ng-animate="'animate'" ng-repeat="carta in eleme.cartas | filter:texto " ng-show="eleme.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
 												<p>
 													<strong>[{{carta.codigo}}] &nbsp;</strong>
 													<span ng-click="setCartaSeleccionada(carta)" class="cursor">{{carta.denominacion}}</span>
@@ -123,8 +123,8 @@
 										</ul>
 									</li>
 								</ul>
-								<ul ng-if="showprocedimientos && elemen.procedimientos" style="clear:both;padding-left:0.3em" class="list-group">
-									<li ng-repeat="proc in elemen.procedimientos | filter:texto " ng-show="elemen.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
+								<ul ng-if="showprocedimientos && elemen.procedimientos" class="list-group">
+									<li ng-animate="'animate'" ng-repeat="proc in elemen.procedimientos | filter:texto " ng-show="elemen.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
 										<p>
 											<strong>[{{proc.codigo}}] &nbsp;</strong>
 											<span ng-click="setProcSeleccionado(proc)" class="cursor">{{proc.denominacion}}</span>
@@ -133,18 +133,18 @@
 									<li ng-if="!elemen.procedimientos"><i>Cargando...</i></li>
 								</ul>
 								<ul ng-if="showcartas && elemen.cartas" style="clear:both;padding-left:0.3em; " class="list-group">
-									<li ng-repeat="carta in elemen.cartas | filter:texto " ng-show="elemen.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
+									<li ng-animate="'animate'" ng-repeat="carta in elemen.cartas | filter:texto " ng-show="elemen.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
 										<p>
 											<strong>[{{carta.codigo}}] &nbsp;</strong>
 											<span ng-click="setCartaSeleccionada(carta)" class="cursor">{{carta.denominacion}}</span>
 										</p>
 									</li>
-									<li ng-if="!elemen.cartas"><i>Cargando...</i></li>
+									<li ng-animate="'animate'" ng-if="!elemen.cartas"><i>Cargando...</i></li>
 								</ul>
 							</li>
 						</ul>
-						<ul ng-if="showprocedimientos && element.procedimientos" style="clear:both;padding-left:0.3em" class="list-group">
-							<li ng-repeat="proc in element.procedimientos | filter:texto " ng-show="element.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
+						<ul ng-if="showprocedimientos && element.procedimientos" class="list-group">
+							<li ng-animate="'animate'" ng-repeat="proc in element.procedimientos | filter:texto " ng-show="element.id == seleccionado.id" class="organica_proc list-group-item list-group-item-warning">
 								<p>
 									<strong>[{{proc.codigo}}] &nbsp;</strong>
 									<span ng-click="setProcSeleccionado(proc)" class="cursor">{{proc.denominacion}}</span>
@@ -152,14 +152,14 @@
 							</li>
 							<li ng-if="!element.procedimientos"><i>Cargando...</i></li>
 						</ul>
-						<ul ng-if="showcartas && element.cartas" style="clear:both;padding-left:0.3em; " class="list-group">
-							<li ng-repeat="carta in element.cartas | filter:texto " ng-show="element.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
+						<ul ng-if="showcartas && element.cartas" class="list-group">
+							<li ng-animate="'animate'" ng-repeat="carta in element.cartas | filter:texto " ng-show="element.id == seleccionado.id" class="organica_proc list-group-item list-group-item-info">
 								<p>
 									<strong>[{{carta.codigo}}] &nbsp;</strong>
 									<span ng-click="setCartaSeleccionada(carta)" class="cursor">{{carta.denominacion}}</span>
 								</p>
 							</li>
-							<li ng-if="!element.cartas"><i>Cargando...</i></li>
+							<li ng-animate="'animate'" ng-if="!element.cartas"><i>Cargando...</i></li>
 						</ul>
 					</li>
 				</ul>
