--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -2,7 +2,7 @@
 	<div class="col-md-12 col-sm-12 col-lg-12">
 		<div class="col-sm-12 col-md-6 col-lg-6">
 			<div class="col-md-12 col-lg-6">
-				<div class="panel panel-success">
+				<div class="panel panel-success animated bounceInLeft">
 					<div class="panel-heading">
 						Ayuda
 					</div>
@@ -43,7 +43,7 @@
 						Usuario
 					</div>
 					<div class="panel-body minheight300">
-						<ul style="list-style: none">
+						<ul class="list-unstyled">
 						<li><strong>Usuario:</strong> {{$root.session.login}}</li>
 						<li><strong>Nombre:</strong> {{$root.session.nombre}}</li>
 						<li><strong>Apellidos:</strong> {{$root.session.apellidos}}</li>
@@ -98,9 +98,9 @@
 	<div class="col-md-12">
 		<h3 class="text-center">{{meses[mesActual]}} - {{anyoActual}}</h3>
 		<div ng-repeat="indicador in indicadores" class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-			<a href="/stats" ng-class="{ '{{indicador.bg}}' : true }" class="dashboard-stat dashboard-stat-light">
+			<a href="/stats" ng-class="indicador.bg" class="dashboard-stat dashboard-stat-light">
 				<div class="visual">
-					<i ng-class="{ '{{indicador.icon}}' : true }" class="fa"></i>
+					<i ng-class="indicador.icon" class="fa"></i>
 				</div>
 				<div class="details">
 					<div class="number">{{indicador.number}}</div>
@@ -110,8 +110,10 @@
 		</div>
 		<div style="margin-top:1em" class="row" >
 			<div ng-If="pendientes.length>0" ng-class="{
-			'col-md-6' : inconsistencias.length>0 && pendientes.length>0, 'col-sm-6' : inconsistencias.length>0 && pendientes.length>0,
-			'col-md-12' : inconsistencias.length==0, 'col-sm-12' : inconsistencias.length==0 }">
+			'col-md-6': inconsistencias.length > 0 && pendientes.length > 0,
+			'col-sm-6': inconsistencias.length > 0 && pendientes.length > 0,
+			'col-md-12': inconsistencias.length === 0,
+			'col-sm-12': inconsistencias.length === 0}">
 				<div class="portlet box yellow">
 					<div class="portlet-title">
 						<div class="caption">
@@ -120,7 +122,7 @@
 						</div>
 					</div>
 					<div class="portlet-body">
-						<ul style="max-height:300px; overflow-y:auto; overflow-x:hidden" ng-class="{'small': $root.condensed}">
+						<ul ng-class="{'small': $root.condensed}">
 							<li ng-repeat="procedimiento in pendientes">
 								<a href="/procedimiento/{{procedimiento._id.codigo}}">
 									[{{procedimiento._id.codigo}}]
@@ -131,9 +133,11 @@
 					</div>
 				</div>
 			</div>
-			<div ng-If="inconsistencias.length>0" ng-class="{
-			'col-md-6' : inconsistencias.length>0 && pendientes.length>0, 'col-sm-6' : inconsistencias.length>0 && pendientes.length>0,
-			'col-md-12' : pendientes.length==0, 'col-sm-12' : pendientes.length==0 }">
+			<div ng-if="inconsistencias.length > 0" ng-class="{
+			'col-md-6': inconsistencias.length > 0 && pendientes.length > 0,
+			'col-sm-6': inconsistencias.length > 0 && pendientes.length > 0,
+			'col-md-12': pendientes.length === 0,
+			'col-sm-12': pendientes.length === 0 }">
 				<div class="portlet box red">
 					<div class="portlet-title">
 						<div class="caption">
@@ -142,7 +146,7 @@
 						</div>
 					</div>
 					<div class="portlet-body">
-						<ul style="max-height:300px; overflow-y:auto; overflow-x:hidden" ng-class="{'small': $root.condensed}">
+						<ul ng-class="{'small': $root.condensed}">
 							<li ng-repeat="procedimiento in inconsistencias">
 								<a href="/procedimiento/{{procedimiento._id.codigo}}">
 									[{{procedimiento._id.codigo}}]
